--- a/style.css
+++ b/style.css
@@ -500,9 +500,9 @@ padding: 100px 0;
 }
 /*-----contact-form-----*/
 .contactform{
-width: 500px;
+width: 80%;
 font-size: 15px;
-margin: 150px;
+margin: 10%;
 padding: 20px;
 border: solid 2px green;
 border-radius: 20px;
