--- a/style.css
+++ b/style.css
@@ -502,7 +502,7 @@ padding: 100px 0;
 .contactform{
 width: 80%;
 font-size: 15px;
-margin: 10%;
+margin: 100px auto;
 padding: 20px;
 border: solid 2px green;
 border-radius: 20px;
