--- a/style.css
+++ b/style.css
@@ -498,7 +498,31 @@ padding: 100px 0;
 
     }
 }
+/*-----contact-form-----*/
+.contactform{
+width: 80%;
+font-size: 15px;
+margin: 100px auto;
+padding: 20px;
+border: solid 2px green;
+border-radius: 20px;
+}
+.contactform input, label,button{
+    width: 80%;
+    padding: 10px;
+    margin: 100px auto;
+    box-sizing: content-box;
+}
+textarea{
+width: 450px;    
+height: 100px;
+margin-left: 10px;
+}
 
+.submitbutton{
+    background: #0073df;
+    border-radius: 5em;
+}
 /*-----footer-----*/
 .footer{
 width: 100%;
