--- a/style.css
+++ b/style.css
@@ -73,357 +73,55 @@ text-align: right;
     
     
 }
-//I'm Using SCSS
-html, body {
-  height: 100%;
-}
 
-body {
-  min-height: 100%;
-  font-family: 'Rozha One', serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-img {
-  max-width: 100%;
-  bottom: -14px;
-  position: relative;
-}
-
-.card {
-  position: absolute;
-  bottom: 5%;
-  right: 5%;
-  text-align: center;
-  color: #272243;
-  width: 100%;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 20px 20px rgba(0,0,0,0.03);
-  width: 320px;
-  overflow: hidden;
-  animation: updown 3s ease 6;
-  
-  &::before {
-    content: "";
-    border-width: 20px;
-    border-color: transparent;
-    border-style: solid;
-    border-left-color: rgba(255,255,255, 0.9);
-    border-left-width: 30px;
-    display: block;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    z-index: 2;
-    transform: translatex(calc(-50% + 15px));
-    filter: drop-shadow(5px 5px 4px #000);
-    pointer-events: none;
-  }
-  
-  h1 {
-    margin: 0;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  @keyframes updown {
-    0%, 50%, 100% {
-      transform: translatey(0);
-    }
-    20% {
-      transform: translatey(5px);
-    }
-    25% {
-      transform: translatey(-20px);
-    }
-    30% {
-      transform: translatey(20px);
-    }
-    35% {
-      transform: translatey(-5px);
-    }
-  }
-}
-
-.banner {
-  min-height: 100%;
-  width: 100%;
-  background: url('https://i.imgur.com/T57flD5.jpg');
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  padding: 60px;
-  color: #fff;
-}
-
-.hamburger {
-  position: absolute;
-  left: 30px;
-  top: 30px;
-  display: flex;
-  height: 18px;
-  width: 24px;
-  flex-direction: column;
-  justify-content: space-between;
-  cursor: pointer;
-  user-select: none;
-  z-index: 1;
-  
-  &__icon {
+.hero-btn{
     display: inline-block;
-    height: 2px;
-    width: 24px;
-    background: #fff;
-    border-radius: 2px;
-  }
-}
-
-.sidebar {
-  height: 100vh;
-  width: 320px;
-  background: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 60px;
-  display: flex;
-  flex-direction: column;
-  transform: translatex(-100%);
-  transition: transform 0.4s ease-in-out;
-  
-  &__close {
-    position: absolute;
-    top: 50%;
-    right: -30px;
-    background: #fff;
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    box-shadow: 0 0 20px 20px rgba(0,0,0,0.03);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translatex(-100%);
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
     cursor: pointer;
-    transition: transform 0.4s ease-in-out 0.2s;
-    
-    &::before, 
-    &::after {
-      content: "";
-      height: 2px;
-      background: #898989;
-      width: 24px;
-      display: block;
-      position: absolute;
+border-radius: 5em;
+}
+.hero-btn:hover{
+    border: 1px solid #f44336;
+    background: #36f43c;
+    transition: 1s;
+}
+nav .fa{
+    display: none;
+}
+@media(max-width:700px){
+    .text-box h1{
+        font-size: 20px;
     }
-    
-    &::after {
-      transform: rotate(90deg);
+    .nav-links ul li{
+        display: block;
     }
-  }
-  
-  &__menu { //it's means sidebar__menu
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    justify-content: space-around;
-    font-size: 36px;
-    margin-top: 80px;
-    margin-bottom: 80px;
-    color: #898989;
-    
-    a {
-      color: currentcolor;
-      text-decoration: none;
-      transform: translatex(-80%);
-      transition: transform 0.4s ease-in-out;
-      
-      &::before {
-        content: "";
-        height: 2px;
-        background: #898989;
-        width: 120px;
+    .nav-links{
         position: absolute;
-        bottom: -2px;
-        left: 0;
-        transform: translatex(-50%);
-        opacity: 0;
-        transition: transform 0.4s ease-in-out, opacity 0.4s linear;
-      }
-      
-      &:hover {
-        &::before {
-          transform: translatex(0);
-          opacity: 1;
-        }
-      }
-      
-      @for $i from 1 through 5 {
-        &:nth-child(#{$i}) {
-          transition-delay: $i * 0.05s;
-        }
-      }
+        background: #f44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
     }
-  }
-  
-  &__social {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    
-    li {
-      margin: 4px;
+    nav .fa{
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
     }
-    
-    a, svg {
-      display: inline-block;
-      height: 18px;
-      width: 18px;
+    .nav-links ul {
+        padding: 30px;
     }
-  }
-}
-
-.menu-control {
-  display: none;
-  
-  &:checked {
-    & + .sidebar {
-      transform: translatex(0);
-    }
-    
-    & + .sidebar .sidebar__close {
-      transform: translatex(0) rotate(45deg);
-    }
-    
-    & + .sidebar .sidebar__menu a {
-      transform: translatex(0);
-    }
-  }
-}
-/*-----body-----*/
-body{
-    font-family: 'inter', sans-serif;
-}
-/*-----About us-----*/
-.About{
-    text-align: center;
-}
-/*-----News-Announcement-----*/
-
-
-ul.pinboards li,
-ul.tag-list li {
-list-style: none;
-}
-ul.pinboards li h4 {
-margin-top: 20px;
-font-size: 18px;
-}
-ul.pinboards li div p { font-size: 16px; }
-ul.pinboards li div {
-text-decoration: none;
-color: #000;
-background: #ffc;
-display: block;
-height: 140px;
-width: 140px;
-padding: 1em;
-position: relative;
-}
-ul.pinboards li div small {
-position: absolute;
-top: 5px;
-right: 5px;
-font-size: 10px;
-}
-ul.pinboards li div a {
-position: absolute;
-right: 10px;
-bottom: 10px;
-color: inherit;
-}
-ul.pinboards li {
-margin: 10px 40px 50px 0;
-float: left;
-}
-ul.pinboards li div p {
-font-size: 12px;
-}
-ul.pinboards li div {
-text-decoration: none;
-color: #000;
-background: #ffc;
-display: block;
-height: 140px;
-width: 180px;
-padding: 1em;
-/* Firefox */
--moz-box-shadow: 5px 5px 2px #212121;
-/* Safari+Chrome */
--webkit-box-shadow: 5px 5px 2px rgba(33, 33, 33, 0.7);
-/* Opera */
-box-shadow: 5px 5px 2px rgba(33, 33, 33, 0.7);
-}
-ul.pinboards li div {
--webkit-transform: rotate(-6deg);
--o-transform: rotate(-6deg);
--moz-transform: rotate(-6deg);
--ms-transform: rotate(-6deg);
-}
-ul.pinboards li:nth-child(even) div {
--o-transform: rotate(4deg);
--webkit-transform: rotate(4deg);
--moz-transform: rotate(4deg);
--ms-transform: rotate(4deg);
-position: relative;
-top: 5px;
-}
-ul.pinboards li:nth-child(3n) div {
--o-transform: rotate(-3deg);
--webkit-transform: rotate(-3deg);
--moz-transform: rotate(-3deg);
--ms-transform: rotate(-3deg);
-position: relative;
-top: -5px;
-}
-ul.pinboards li:nth-child(5n) div {
--o-transform: rotate(5deg);
--webkit-transform: rotate(5deg);
--moz-transform: rotate(5deg);
--ms-transform: rotate(5deg);
-position: relative;
-top: -10px;
-}
-ul.pinboards li div:hover,
-ul.pinboards li div:focus {
--webkit-transform: scale(1.1);
--moz-transform: scale(1.1);
--o-transform: scale(1.1);
--ms-transform: scale(1.1);
-position: relative;
-z-index: 5;
-}
-ul.pinboards li div {
-text-decoration: none;
-color: #000;
-background: #ffc;
-display: block;
-height: 390px;
-width: 350px;
-padding: 1em;
-margin-left: 15px;
-margin-top: 40px;
-margin-bottom: 40px;
--moz-box-shadow: 5px 5px 7px #212121;
--webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
--moz-transition: -moz-transform 0.15s linear;
--o-transition: -o-transform 0.15s linear;
--webkit-transition: -webkit-transform 0.15s linear;
 }
 /*-----services-----*/
 .center-tabes{
