--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav{
     align-items: center;
 }
 nav img{
-    width: 100px;
+    width: 150px;
 }
 .nav-links{
 flex: 1;
@@ -41,7 +41,7 @@ text-align: right;
     content: '';
     width: 0%;
     height: 2px;
-    background: #f44336;
+    background: #de4a30;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -71,6 +71,7 @@ text-align: right;
     font-size: 14px;
     color: white;
     
+    
 }
 .hero-btn{
     display: inline-block;
@@ -82,11 +83,11 @@ text-align: right;
     background: transparent;
     position: relative;
     cursor: pointer;
-
+border-radius: 5em;
 }
 .hero-btn:hover{
     border: 1px solid #f44336;
-    background: #f44336;
+    background: #36f43c;
     transition: 1s;
 }
 nav .fa{
@@ -120,6 +121,127 @@ nav .fa{
     .nav-links ul {
         padding: 30px;
     }
+}
+/*-----body-----*/
+body{
+    font-family: 'inter', sans-serif;
+}
+/*-----About us-----*/
+.About{
+    text-align: center;
+}
+/*-----News-Announcement-----*/
+
+
+ul.pinboards li,
+ul.tag-list li {
+list-style: none;
+}
+ul.pinboards li h4 {
+margin-top: 20px;
+font-size: 18px;
+}
+ul.pinboards li div p { font-size: 16px; }
+ul.pinboards li div {
+text-decoration: none;
+color: #000;
+background: #ffc;
+display: block;
+height: 140px;
+width: 140px;
+padding: 1em;
+position: relative;
+}
+ul.pinboards li div small {
+position: absolute;
+top: 5px;
+right: 5px;
+font-size: 10px;
+}
+ul.pinboards li div a {
+position: absolute;
+right: 10px;
+bottom: 10px;
+color: inherit;
+}
+ul.pinboards li {
+margin: 10px 40px 50px 0;
+float: left;
+}
+ul.pinboards li div p {
+font-size: 12px;
+}
+ul.pinboards li div {
+text-decoration: none;
+color: #000;
+background: #ffc;
+display: block;
+height: 140px;
+width: 180px;
+padding: 1em;
+/* Firefox */
+-moz-box-shadow: 5px 5px 2px #212121;
+/* Safari+Chrome */
+-webkit-box-shadow: 5px 5px 2px rgba(33, 33, 33, 0.7);
+/* Opera */
+box-shadow: 5px 5px 2px rgba(33, 33, 33, 0.7);
+}
+ul.pinboards li div {
+-webkit-transform: rotate(-6deg);
+-o-transform: rotate(-6deg);
+-moz-transform: rotate(-6deg);
+-ms-transform: rotate(-6deg);
+}
+ul.pinboards li:nth-child(even) div {
+-o-transform: rotate(4deg);
+-webkit-transform: rotate(4deg);
+-moz-transform: rotate(4deg);
+-ms-transform: rotate(4deg);
+position: relative;
+top: 5px;
+}
+ul.pinboards li:nth-child(3n) div {
+-o-transform: rotate(-3deg);
+-webkit-transform: rotate(-3deg);
+-moz-transform: rotate(-3deg);
+-ms-transform: rotate(-3deg);
+position: relative;
+top: -5px;
+}
+ul.pinboards li:nth-child(5n) div {
+-o-transform: rotate(5deg);
+-webkit-transform: rotate(5deg);
+-moz-transform: rotate(5deg);
+-ms-transform: rotate(5deg);
+position: relative;
+top: -10px;
+}
+ul.pinboards li div:hover,
+ul.pinboards li div:focus {
+-webkit-transform: scale(1.1);
+-moz-transform: scale(1.1);
+-o-transform: scale(1.1);
+-ms-transform: scale(1.1);
+position: relative;
+z-index: 5;
+}
+ul.pinboards li div {
+text-decoration: none;
+color: #000;
+background: #ffc;
+display: block;
+height: 390px;
+width: 350px;
+padding: 1em;
+margin-left: 15px;
+margin-top: 40px;
+margin-bottom: 40px;
+-moz-box-shadow: 5px 5px 7px #212121;
+-webkit-box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
+-moz-transition: -moz-transform 0.15s linear;
+-o-transition: -o-transform 0.15s linear;
+-webkit-transition: -webkit-transform 0.15s linear;
 }
 /*-----services-----*/
 .center-tabes{
@@ -380,21 +502,21 @@ padding: 100px 0;
 .contactform{
 width: 500px;
 font-size: 15px;
-margin: 100px;
+margin: 150px;
 padding: 20px;
 border: solid 2px green;
 border-radius: 20px;
 }
 .contactform input, label,button{
-    width: 80%;
+    width: 90%;
     padding: 10px;
-    margin: 100px;
+    margin: 10px;
     box-sizing: content-box;
 }
 textarea{
 width: 450px;    
 height: 100px;
-margin-left: 11px;
+margin-left: 10px;
 }
 
 .submitbutton{
