--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     height: 100vh;
     width: 100%;
-    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(ford/mylogo.jpg);
+    background-image:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(ford/mylogo.png);
     background-position: center;
     background-size: cover;
     position: relative;
